# dockerfile-security

./: Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  demo.py  dynload.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: upload-pypi.yml
_dev/: dynload.py  two.py
dockefile_sec/: __main__.py
dockerfile_sec/: __main__.py
dockerfile_sec/rules/: core.yaml  credentials.yaml
examples/: Dockerfile-example  ignore-1
rules/: java.yaml
security_linter/: __main__.py  rules.yaml  setup.py
